Fixed alignment on name to center

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,18 +1,18 @@
 /* Give your page a fun background color */
     body{
-        background-color: cornsilk
+        background-color: cornsilk;
     }
 /* Make the header and footer a different color from the background */
     header{
-        background-color:lavender
+        background-color:lavender;
     }
 
     footer{
-        background-color:salmon
+        background-color:salmon;
     }
 /* Align the h1 containing your name in the center of the header*/
     h1{
-        background-position: center
+        text-align: center;
     }
 /* Make your p tag a different color and italic */
 
